--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list_of_open_restaurants = []\n",
+    "    taurants = []\n",
     "    "
    ]
   },
