--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    \n",
-    "    filter(, restaurants)\n",
+    "    return list(, restaurants)\n",
     "    "
    ]
   },
