Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    \n",
+    "    is_open =\n",
     "    return list(filter(, restaurants))\n",
     "    "
    ]
