Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    is_openlist(map(lambda x: x['is_closed']))\n",
+    "    is_open = list(map(lambda x: x['is_closed'], restaurants))\n",
     "    return list(filter(, restaurants))\n",
     "    "
    ]
