Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    is_open = list(map(lambda x: x['is_closed'], restaurants))\n",
+    "    is_open = []\n",
+    "    if list(map(lambda x: x['is_closed'], restaurants)):\n",
     "    return is_open\n",
     "    "
    ]
