--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    is_open = []\n",
-    "    if list(map(lambda x: x['is_closed'], restaurants)):\n",
+    "    if list(map(lambda x: x['is_closed'], restaurants)) is False:\n",
+    "        \n",
     "    return is_open\n",
     "    "
    ]
