Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -476,7 +476,7 @@
     "def open_restaurants(restaurants):\n",
     "    is_open = []\n",
     "    if list(map(lambda x: x['is_closed'], restaurants)) is False:\n",
-    "        \n",
+    "        return is_open\n",
     "    return is_open\n",
     "    "
    ]
