--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
     }
    ],
    "source": [
-    "names = list(map(lambda x: x['name'], restaurants))\n",
+    "names = list(map(lambda restaurant: x['name'], restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
