--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +251,13 @@
        " 'Stripes Biscuit']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names = list(map(lambda restaurant: x['name'], restaurants))\n",
+    "names = list(map(lambda restaurant: restaurant['name'], restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "review_counts = list(map(lambda x: x['review_count'], restaurants))\n",
+    "review_counts = list(map(lambda restaurant: x['review_count'], restaurants))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
