--- a/index.ipynb
+++ b/index.ipynb
@@ -474,9 +474,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    is_open = []\n",
-    "    if list(map(lambda x: x['is_closed'], restaurants)) is False:\n",
-    "        return is_open.append(restaurants)\n",
+    "    ilist(map(lambda x: x['is_closed'], restaurants)) is False:\n",
     "    return is_open\n",
     "    "
    ]
