Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -474,8 +474,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    ilist(map(lambda x: x['is_closed'], restaurants)) is False:\n",
-    "    return is_open\n",
+    "    return list(map(lambda x: x['is_closed'], restaurants)) is False:\n",
     "    "
    ]
   },
