--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(map(lambda restaunrat: x['is_closed'], restaurants)) is False:\n",
+    "    return list(map(lambda restaurant: not restaurant['is_closed'], restaurants)) is False:\n",
     "    "
    ]
   },
