Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -469,27 +469,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(map(lambda restaurant: not restaurant['is_closed'], restaurants)) is False:\n",
+    "    return list(map(lambda restaurant: not restaurant['is_closed'], restaurants))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[True, True, True, True, True, False, True, False]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
