--- a/index.ipynb
+++ b/index.ipynb
@@ -553,7 +553,8 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    \n",
+    "    for each restaurant in restu\n",
+    "    map_format_restaurants(restaurants)\n",
     "    return list(filter(lambda restaurant: restaurant['price']"
    ]
   },
