Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -554,7 +554,7 @@
    "source": [
     "def cheapest_restaurants(restaurants):\n",
     "    for each restaurant in restaurants:\n",
-    "        map_format_restaurants(restaurants)\n",
+    "        map_format_restaurants(restaurant)\n",
     "    return list(filter(lambda restaurant: restaurant['price']"
    ]
   },
