--- a/index.ipynb
+++ b/index.ipynb
@@ -555,7 +555,7 @@
     "def cheapest_restaurants(restaurants):\n",
     "    for each restaurant in restaurants:\n",
     "        map_format_restaurants(restaurant)\n",
-    "    return list(filter(lambda restaurant: restaurant['price']"
+    "    return list(filter(lambda restaurant: restaurant['price'] == 1, rest"
    ]
   },
   {
