Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -548,14 +548,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-25-8d8eb24601ee>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-8d8eb24601ee>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for each restaurant in restaurants:\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
     "    for each restaurant in restaurants:\n",
     "        map_format_restaurants(restaurant)\n",
-    "    return list(filter(lambda restaurant: restaurant['price'] == 1, rest"
+    "    return list(filter(lambda restaurant: restaurant['price'] == 1, restaurants))"
    ]
   },
   {
