Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -548,14 +548,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    for restaurant in restaurants:\n",
-    "        map_format_restaurants(restaurant)\n",
-    "    return list(filter(lambda restaurant: len(restaurant['price'] == 1, restaurants))"
+    "    return list(filter(lambda restaurant: len(restaurant['price']) == 1, restaurants))"
    ]
   },
   {
