--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
    ],
    "source": [
     "total_reviews = 0\n",
-    "for\n",
+    "for review_count in review_c\n",
     "total_reviews # 3420"
    ]
   },
