--- a/index.ipynb
+++ b/index.ipynb
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -490,28 +490,25 @@
       "text/plain": [
        "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
        " {'name': 'Salt And Board',\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': False,\n",
        "  'review_count': 11},\n",
        " {'name': 'Frontier Restaurant',\n",
-       "  'price': '$',\n",
+       "  'price': 1,\n",
        "  'is_closed': False,\n",
        "  'review_count': 1373},\n",
        " {'name': 'Nexus Brewery',\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': False,\n",
        "  'review_count': 680},\n",
        " {'name': \"Devon's Pop Smoke\",\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': False,\n",
        "  'review_count': 54},\n",
-       " {'name': 'Philly Steaks',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 25}]"
+       " {'name': 'Philly Steaks', 'price': 2, 'is_closed': False, 'review_count': 25}]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
@@ -568,10 +565,13 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[{'name': 'Frontier Restaurant',\n",
+       "  'price': 1,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373}]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
