Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -547,17 +547,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['price'] == 1, restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
@@ -571,7 +571,7 @@
        "  'review_count': 1373}]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
